2021-07-21 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCsymt.c (processFuncArgs): minor correction to #3260 bug fix

2021-07-19 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCsymt.c (processFuncPtrArgs,processFuncArgs),
	* src/SDCCsymt.h,
	* src/SDCCmem.c (allocVariables): fix bug #3260
	* support/regression/tests/bug-3260.c: added test

2021-07-16 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCast.c (decorateType): fix bug #2546

2021-07-16 Visenri

    * src/SDCC.lex
      src/SDCC.y
      Added builtins: "__builtin_rlc", "__builtin_rrc" & "__builtin_swap".
      These functions will allow swap and rotate operations with volatile variables.
    * src/SDCCast.c
      src/SDCCsymt.c
      src/SDCCsymt.h
      src/SDCCval.c
      src/SDCCval.h
      Support for conditional type reduction (patch #392) for optimized values to 0.
      Fixed size calculation for ptrdiff type.
      Fixed int promotion for shift operations: using only left operand.
      Added checks for side effects or volatility in optimizeRRCRLC (like optimizeSWAP, bug #3218)

2021-07-13 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/mcs51/gen.c (genMinusDec),
	* src/ds390/gen.c (genMinusDec): fix bug #3246

2021-07-12 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCast.c (copyAst): fix bug #3264
	* support/regression/tests/inline.c: add test for bug #3264

2021-07-11 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* support/valdiags/tests/struct.c: add test for bug #3086

2021-07-10 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* support/regression/tests/bug-3141.c: reenable for mcs51
	* src/SDCCsymt.c (promoteAnonStructs): fix bug #3086

2021-07-10 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCdwarf2.c (dwWriteFrames): fix bug #3161

2021-07-09 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCdwarf2.h: fix incorrect DW_CFA_nop value