@@ -1320,6 +1320,7 @@ function_declarator
           FUNC_ARGS(funcType) = reverseVal($4);
 
           /* nest level was incremented to take care of the parms  */
+          leaveBlockScope (currBlockno);
           NestLevel -= LEVEL_UNIT;
           currBlockno = STACK_POP(blockNum);
           seqPointNo++; /* not a true sequence point, but helps resolve scope */
@@ -1816,6 +1817,7 @@ start_block
 end_block
    : '}'
         {
+          leaveBlockScope (currBlockno);
           NestLevel -= LEVEL_UNIT;
           currBlockno = STACK_POP(blockNum);
         }
@@ -1955,6 +1957,7 @@ iteration_statement
                           cleanUpLevel(StructTab, NestLevel + LEVEL_UNIT);
                           noLineno--;
 
+                          leaveBlockScope (currBlockno);
                           NestLevel -= LEVEL_UNIT;
                           currBlockno = STACK_POP(blockNum);
                         }
@@ -2523,6 +2526,7 @@ declaration_after_statement
 implicit_block
    : declaration_after_statement statements_and_implicit
      {
+       leaveBlockScope (currBlockno);
        NestLevel -= SUBLEVEL_UNIT;
        currBlockno = STACK_POP(blockNum);
        $$ = createBlock($1, $2);
@@ -2530,6 +2534,7 @@ implicit_block
      }
    | declaration_after_statement
      {
+       leaveBlockScope (currBlockno);
        NestLevel -= SUBLEVEL_UNIT;
        currBlockno = STACK_POP(blockNum);
        $$ = createBlock($1, NULL);
