@@ -739,6 +739,7 @@ int isConstant (sym_link * type);
 int isVolatile (sym_link * type);
 int isRestrict (sym_link * type);
 value *aggregateToPointer (value *);
+void leaveBlockScope (int block);
 
 
 extern char *nounName (sym_link *);     /* noun strings */
